--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,20 @@ body {
     padding: 20px;
     margin: 0;
     background-color: #2D348D;
-    animation: rainbow 10s infinite;
+    animation: rainbow 15s infinite;
 }
 
 @keyframes rainbow {
-    0%   {background-color: #8B0000;} 
-    16%  {background-color: #A0522D;} 
-    33%  {background-color: #808000;}  
-    50%  {background-color: #006400;}  
-    66%  {background-color: #00008B;}
-    83%  {background-color: #4B0082;}  
-    100% {background-color: #00827e;}  
+    0%    {background-color: #FF0000;} 
+    10%   {background-color: #FF7F00;}  
+    20%   {background-color: #FFFF00;}  
+    40%   {background-color: #00FF00;}  
+    50%   {background-color: #00FF7F;}  
+    60%   {background-color: #00FFFF;}  
+    70%   {background-color: #007FFF;}
+    80%   {background-color: #0000FF;} 
+    90%   {background-color: #8B00FF;}  
+    100%  {background-color: #FF00FF;}  
 }
 
 /* Container principal */
@@ -33,28 +36,29 @@ body {
 /* Image en haut à droite */
 .image-container {
     position: absolute;
-    top: 100px;
-    right: 50px; 
-    width: 100px;
-    margin-right: 60px;
+    top: 5%; 
+    right: 5%; 
+    width: 10%; 
+    max-width: 100px; 
+    height: auto; 
 }
 
 .image-container img {
-    width: 150%; 
+    width: 100%; 
     height: auto;
     border-radius: 10px;
     border: 2px solid #37474f;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease; /* Transition des effets */
 }
-/* Hover sur l'image */
+
+/* Hover sur l'image avec effets spectaculaires */
 .image-container img:hover {
-    transform: scale(1.3); /* Agrandit l'image */
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
+    transform: scale(1.1) rotate(10deg); /* Agrandit et fait tourner l'image */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); /* Ombre */
     border-color: #1e88e5; 
     transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease; 
 }
 
-
-/* Titre principal */
 h1 {
     text-align: center;
     color: #1e88e5;
@@ -62,19 +66,17 @@ h1 {
     margin-top: 0;
 }
 
-/* Informations générales */
 .info {
     font-size: 1.2em;
     line-height: 1.5;
     margin-bottom: 20px;
 }
 
-.highlight {
+.infotexte {
     color: #1e88e5;
     font-weight: bold;
 }
 
-/* Sections */
 .section {
     margin-bottom: 20px;
 }
@@ -104,14 +106,15 @@ ul li::before {
     color: #1e88e5;
 }
 
-
 /* Responsive */
 @media (max-width: 768px) {
     .container {
         padding: 10px;
     }
     .image-container {
-        max-width: 25px; 
+        width: 15%; 
+        max-width: 50px; 
+        top: 5%; 
+        right: 5%; 
     }
 }
-
